add header to each page

--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Add Employee Information</title>
 </head>
+
+<div id="header">
+	<iframe src="header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
+	</iframe>
+</div>
 <center>
 	<font color="black" size="4" style="font-family: avenir">
 
@@ -34,4 +39,5 @@
 
 	</font>
 </center>
+
 </html>
