--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -17,6 +17,11 @@
 	</font>
 </center>
 </head>
+
+<div id="header">
+	<iframe src="header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
+	</iframe>
+</div>
 <body>
 
 </body>
