--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Get Employee Information</title>
 </head>
+
+<div id="header">
+	<iframe src="header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
+	</iframe>
+</div>
 <center>
 	<font color="black" size="5" style="font-family: avenir">
 
