--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -3,6 +3,12 @@
 <head>
 	<title>Employee Information</title>
 </head>
+
+<div id="header">
+	<iframe src="header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
+	</iframe>
+</div>
+
 <center>
 	<font color="black" size="5" style="font-family: avenir">
 
@@ -36,4 +42,5 @@
 
 	</font>
 </center>
+
 </html>
