--- a/templates/header.html
+++ b/templates/header.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-    <table style="width:100%; height: 60pt;">
+    <table style="width:100%; height: 60pt; border: 1px solid black;">
         <tr>
           <th id="homeButton" style="width:10%">
             <a href="index.html"><img src="images/home.png" alt="" width="25" height="25">
