--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Add Employee Information</title>
+	<style type="text/css">
+		#header iframe {border: none;}
+    </style>
+	<title>Employee Management System -- Home Page</title>
 </head>
+
+<div id="header">
+	<iframe src="header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
+	</iframe>
+</div>
+<div id="homeContent">
+	test
+</div>
 
 </html>
