add header style

--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style type="text/css">
+		#header iframe {border: none;}
+    </style>
 	<title>Add Employee Information</title>
 </head>
 
