--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<style type="text/css">
+		#header iframe {border: none;}
+    </style>
 <center>
 	<font color="DodgerBlue" size="5" style="font-family: avenir">
 		<body bgcolor="lightgrey">
