add links in header

--- a/templates/header.html
+++ b/templates/header.html
@@ -13,16 +13,16 @@
           </th>
           <th style="width:20%;"></th>
           <th>
-            Add Employee
+            <a href="AddEmp.html">Add Employee</a>
           </th>
           <th>
-            Get Employee
+            <a href="GetEmp.html">Get Employee</a>
           </th>
           <th>
-            Attendance
+            <a href="Attendance.html">Attendance</a>
           </th>
           <th>
-            Apply Leave
+            <a href="applyLeave.html">Apply Leave</a>
           </th>
           <th style="width:30%;"></th>
         </tr>
