--- a/templates/ApplyLeave.html
+++ b/templates/ApplyLeave.html
@@ -11,7 +11,7 @@
 	<iframe src="header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
 	</iframe>
 </div>
-<div id="attendanceContent">
+<div id="applyLeaveContent">
 	
 </div>
 
