--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -8,7 +8,7 @@
 </head>
 
 <div id="header">
-	<iframe src="/templates/header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
+	<iframe src="header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
 	</iframe>
 </div>
 <center>
