--- a/templates/ApplyLeave.html
+++ b/templates/ApplyLeave.html
@@ -2,14 +2,33 @@
 <html>
 <head>
 	<style type="text/css">
-		#header iframe {border: none;}
+		
     </style>
 	<title>Employee Management System -- Home Page</title>
 </head>
 
 <div id="header">
-	<iframe src="header.html" name="header" marginwidth="0" marginheight="0" scrolling="no" width="100%" height="30%">
-	</iframe>
+	<table style="width:100%; height: 60pt;">
+        <tr>
+          <th id="homeButton" style="width:10%">
+            <a href="index.html"><img src="{{ url_for('images', filename='home.png')}}" alt="" width="25" height="25">
+          </th>
+          <th style="width:20%;"></th>
+          <th>
+            <a href="AddEmp.html">Add Employee</a>
+          </th>
+          <th>
+            <a href="GetEmp.html">Get Employee</a>
+          </th>
+          <th>
+            <a href="Attendance.html">Attendance</a>
+          </th>
+          <th>
+            <a href="applyLeave.html">Apply Leave</a>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+      </table>
 </div>
 <div id="applyLeaveContent">
 	Apply Leave
