change path thing

--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -25,20 +25,20 @@
 	<table style="width:100%; height: 60pt;">
         <tr>
           <th id="homeButton" style="width:10%">
-            <a href="index.html"><img src="{{ url_for('images', filename='home.png')}}" alt="" width="25" height="25">
+            <a href="/"><img src="{{ url_for('images', filename='home.png')}}" alt="" width="25" height="25">
           </th>
           <th style="width:20%;"></th>
           <th>
-            <a href="AddEmp.html">Add Employee</a>
+            <a href="/addemp/">Add Employee</a>
           </th>
           <th>
-            <a href="GetEmp.html">Get Employee</a>
+            <a href="/getemp/">Get Employee</a>
           </th>
           <th>
-            <a href="Attendance.html">Attendance</a>
+            <a href="/attendance/">Attendance</a>
           </th>
           <th>
-            <a href="applyLeave.html">Apply Leave</a>
+            <a href="/leave/">Apply Leave</a>
           </th>
           <th style="width:30%;"></th>
         </tr>
