--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -25,7 +25,7 @@
 	<table style="width:100%; height: 60pt;">
         <tr>
           <th id="homeButton" style="width:10%">
-            <a href="/"><img src="{{ url_for('images', filename='home.png')}}" alt="" width="25" height="25">
+            <a href="/"><img src="home.png" alt="" width="25" height="25">
           </th>
           <th style="width:20%;"></th>
           <th>
