--- a/templates/ApplyLeave.html
+++ b/templates/ApplyLeave.html
@@ -4,7 +4,7 @@
 	<style type="text/css">
 		
     </style>
-	<title>Employee Management System -- Home Page</title>
+	<title>Employee Management System -- Apply Leave</title>
 </head>
 
 <div id="header">
