--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -40,6 +40,9 @@
           <th>
             <a href="/leave/">Apply Leave</a>
           </th>
+          <th>
+            <a href="/portfolio/">Portfolio</a>
+          </th>
           <th style="width:30%;"></th>
         </tr>
       </table>
