--- a/templates/Portfolio.html
+++ b/templates/Portfolio.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<style type="text/css">
 		
     </style>
-	<title>Employee Management System -- Apply Leave</title>
+	<title>Employee Management System -- Attendance</title>
 </head>
 
 <div id="header">
@@ -33,8 +32,8 @@
         </tr>
       </table>
 </div>
-<div id="applyLeaveContent">
-	Apply Leave
+<div id="attendanceContent">
+	Attendance
 </div>
 
 </html>
