--- a/templates/Attendance.html
+++ b/templates/Attendance.html
@@ -1,40 +1,120 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<style type="text/css">
+	<!-- <style type="text/css">
 		
-    </style>
+    </style> -->
+    <style>
+      .button {
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 8px;
+        font-family: cursive;
+        background-color: #3b47e4;
+      }
+
+      .cursive {
+        font-family: cursive;
+        text-align: center;
+        font-size: 15px;
+        padding: 5px;
+      }
+
+      .title {
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        text-align: center;
+        font-size: 20px;
+        padding-left: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+      }
+      </style>
+
 	<title>Employee Management System -- Attendance</title>
 </head>
 
 <div id="header">
-	<table style="width:100%; height: 60pt;">
+	<table style="width:100%; height: 220pt">
         <tr>
           <th id="homeButton" style="width:10%">
             <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
           </th>
           <th style="width:20%;"></th>
-          <th>
+          <th class="cursive">
             <a href="/addemp/">Add Employee</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/getemp/">Get Employee</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/attendance/">Attendance</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/leave/">Apply Leave</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/portfolio/">Portfolio</a>
           </th>
           <th style="width:30%;"></th>
         </tr>
+        <!------------------------ blank row ------------------------->
+        <tr style="height:50px;">
+          <th></th>
+          <th style="width:20%;"></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th style="width:30%;"></th>
+        </tr>
+        <!------------------------ blank row ------------------------->
+
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#5762fa" class="title">Attendance </th>
+          <th style="width:30%;"></th>
+        </tr>
+        
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th style="background-color:#84fad8" class="cursive">Employee ID : </th>
+          <th colspan="4" style="background-color:#84fad8">
+            <form method="post" action="">
+                  <input type="text" name="employee_id" size="40" class="cursive">
+          </form>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+
+        <!------------------------------- Button -------------------------------->
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="2" style="background-color:#84fad8">
+            <button class="button">Check In</button>
+          </th>
+          <th colspan="3" style="background-color:#84fad8">
+            <button class="button">Check out</button>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
       </table>
+      
 </div>
 <div id="attendanceContent">
 	Attendance
 </div>
+
+
 
 </html>
