--- a/templates/Attendance.html
+++ b/templates/Attendance.html
@@ -4,10 +4,11 @@
 	<!-- <style type="text/css">
 		
     </style> -->
+    
     <style>
       .button {
-        border: none;
-        color: white;
+        border: 1px solid black;
+        color: black;
         padding: 15px 32px;
         text-align: center;
         text-decoration: none;
@@ -17,7 +18,7 @@
         cursor: pointer;
         border-radius: 8px;
         font-family: cursive;
-        background-color: #3b47e4;
+        background-color: #9ee9f4;
       }
 
       .cursive {
@@ -80,17 +81,17 @@
         <tr>
           <th></th>
           <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#5762fa" class="title">Attendance </th>
+          <th colspan="5" style="background-color:#b4e7ef" class="title">Attendance </th>
           <th style="width:30%;"></th>
         </tr>
         
         <tr>
           <th></th>
           <th style="width:20%;"></th>
-          <th style="background-color:#84fad8" class="cursive">Employee ID : </th>
-          <th colspan="4" style="background-color:#84fad8">
+          <th style="background-color:#dfe6ea" class="cursive">Employee ID : </th>
+          <th colspan="4" style="background-color:#dfe6ea">
             <form method="post" action="">
-                  <input type="text" name="employee_id" size="40" class="cursive">
+                  <input type="text" name="emp_id" size="40" class="cursive">
           </form>
           </th>
           <th style="width:30%;"></th>
@@ -100,10 +101,10 @@
         <tr>
           <th></th>
           <th style="width:20%;"></th>
-          <th colspan="2" style="background-color:#84fad8">
+          <th colspan="2" style="background-color:#dfe6ea">
             <button class="button">Check In</button>
           </th>
-          <th colspan="3" style="background-color:#84fad8">
+          <th colspan="3" style="background-color:#dfe6ea">
             <button class="button">Check out</button>
           </th>
           <th style="width:30%;"></th>
