--- a/templates/AttendanceOutput.html
+++ b/templates/AttendanceOutput.html
@@ -6,8 +6,8 @@
     </style> -->
     <style>
       .button {
-        border: none;
-        color: white;
+        border: 1px solid black;
+        color: black;
         padding: 15px 32px;
         text-align: center;
         text-decoration: none;
@@ -17,7 +17,7 @@
         cursor: pointer;
         border-radius: 8px;
         font-family: cursive;
-        background-color: #3b47e4;
+        background-color: #9ee9f4;
       }
 
       .cursive {
@@ -78,10 +78,10 @@
         <tr>
           <th></th>
           <th style="width:20%;"></th>
-          <th colspan="2" style="background-color:#84fad8" class="cursive">Login Time : </th>
-          <th colspan="3" style="background-color:#84fad8">
+          <th colspan="2" style="background-color:#dfe6ea" class="cursive">Login Time : </th>
+          <th colspan="3" style="background-color:#dfe6ea">
             <form method="post" action="">
-                  <input type="text" name="start_date" size="35" class="cursive">
+              <p class="cursive">{{loginTime}}</p>
           </form>
           </th>
           <th style="width:30%;"></th>
@@ -90,10 +90,10 @@
         <tr>
           <th></th>
           <th style="width:20%;"></th>
-          <th colspan="2" style="background-color:#84fad8" class="cursive">Checkout Time : </th>
-          <th colspan="3" style="background-color:#84fad8">
+          <th colspan="2" style="background-color:#dfe6ea" class="cursive">Checkout Time : </th>
+          <th colspan="3" style="background-color:#dfe6ea">
             <form method="post" action="">
-                  <input type="text" name="end_date" size="35" class="cursive">
+                  <p class="cursive">{{checkoutTime}}</p>
           </form>
           </th>
           <th style="width:30%;"></th>
@@ -102,10 +102,10 @@
         <tr>
           <th></th>
           <th style="width:20%;"></th>
-          <th colspan="2" style="background-color:#84fad8" class="cursive">Total Working Hours : </th>
-          <th colspan="3" style="background-color:#84fad8">
+          <th colspan="2" style="background-color:#dfe6ea" class="cursive">Total Working Hours : </th>
+          <th colspan="3" style="background-color:#dfe6ea">
             <form method="post" action="">
-              <input type="text" name="end_date" size="35" class="cursive">
+              <p class="cursive">{{totalWorkingHours}}</p>
           </form>
           </th>
           <th style="width:30%;"></th>
@@ -115,7 +115,7 @@
         <tr>
           <th></th>
           <th style="width:20%;"></th>
-          <th colspan="5" style="background-color:#84fad8">
+          <th colspan="5" style="background-color:#dfe6ea">
             <button class="button">Back</button>
           </th>
           <th style="width:30%;"></th>
