test form action ApplyLeave.html

--- a/templates/ApplyLeave.html
+++ b/templates/ApplyLeave.html
@@ -89,7 +89,7 @@
           <th style="width:20%;"></th>
           <th style="background-color:#dfe6ea" class="cursive">Employee ID : </th>
           <th colspan="4" style="background-color:#dfe6ea">
-            <form method="post" action="">
+            <form method="post" action="/leave/">
                   <input type="text" name="emp_id" size="40" class="cursive">
           </form>
           </th>
@@ -101,7 +101,7 @@
           <th style="width:20%;"></th>
           <th style="background-color:#dfe6ea" class="cursive">Start date : </th>
           <th colspan="4" style="background-color:#dfe6ea">
-            <form method="post" action="">
+            <form method="post" action="/leave/">
                   <input type="text" name="start_date" size="40" class="cursive">
           </form>
           </th>
@@ -113,7 +113,7 @@
           <th style="width:20%;"></th>
           <th style="background-color:#dfe6ea" class="cursive">End date : </th>
           <th colspan="4" style="background-color:#dfe6ea">
-            <form method="post" action="">
+            <form method="post" action="/leave/">
                   <input type="text" name="end_date" size="40" class="cursive">
           </form>
           </th>
