--- a/templates/ApplyLeave.html
+++ b/templates/ApplyLeave.html
@@ -40,7 +40,7 @@
 </head>
 
 <div id="header">
-	<form action="/leave/" method="POST">
+	<form action="/leave/function" method="POST">
         <table style="width:100%; height: 350pt;">
             <tr>
               <th id="homeButton" style="width:10%">
