--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -40,7 +40,7 @@
 
 		<body bgcolor="lightgrey">
 
-			<form action="/getemp/" autocomplete="on" method="POST">
+			<form action="/getemp/results" autocomplete="on" method="POST">
 
 				<h2 style="color: grey">Enter Employee ID</h2>
 
