--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -2,58 +2,105 @@
 <html>
 <head>
 	<style type="text/css">
-		
+		.button {
+        border: 1px solid black;
+        color: black;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+        border-radius: 8px;
+        font-family: cursive;
+        background-color: #9ee9f4;
+      }
+
+      .cursive {
+        font-family: cursive;
+        font-size: 15px;
+        padding: 5px;
+      }
+
+      .title {
+        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+        text-align: center;
+        font-size: 20px;
+        padding-left: 15px;
+        padding-top: 10px;
+        padding-bottom: 10px;
+      }
     </style>
 	<title>Get Employee Information</title>
 </head>
 
 <div id="header">
-	<table style="width:100%; height: 60pt;">
+	<table style="width:100%; height: 220pt;">
         <tr>
           <th id="homeButton" style="width:10%">
             <a href="/"><img src="{{ url_for('static', filename='img/home.png')}}" alt="" width="25" height="25">
           </th>
           <th style="width:20%;"></th>
-          <th>
+          <th class="cursive">
             <a href="/addemp/">Add Employee</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/getemp/">Get Employee</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/attendance/">Attendance</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/leave/">Apply Leave</a>
           </th>
-          <th>
+          <th class="cursive">
             <a href="/portfolio/">Portfolio</a>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+
+        <!------------------------ blank row ------------------------->
+        <tr style="height:50px;">
+          <th></th>
+          <th style="width:20%;"></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th ></th>
+          <th style="width:30%;"></th>
+        </tr>
+        <!------------------------ blank row ------------------------->
+
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#b4e7ef" class="title">Get Employee Details </th>
+          <th style="width:30%;"></th>
+        </tr>
+
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th style="background-color:#dfe6ea" class="cursive">Employee ID : </th>
+          <th colspan="4" style="background-color:#dfe6ea">
+            <form method="post" action="">
+                  <input type="text" name="emp_id" size="40" class="cursive">
+          </form>
+          </th>
+          <th style="width:30%;"></th>
+        </tr>
+
+        <!------------------------------- Button -------------------------------->
+        <tr>
+          <th></th>
+          <th style="width:20%;"></th>
+          <th colspan="5" style="background-color:#dfe6ea">
+            <button class="button">Fetch Info</button>
           </th>
           <th style="width:30%;"></th>
         </tr>
       </table>
 </div>
-<center>
-	<font color="black" size="5" style="font-family: avenir">
-
-		<h1 style="color: DodgerBlue">Employee Information</h1>
-
-		<body bgcolor="lightgrey">
-
-			<form action="/fetchdata" autocomplete="on" method="POST">
-
-				<h2 style="color: grey">Enter Employee ID</h2>
-
-		  		Employee ID:<br> <input style="height:25px;font-size:14pt;" type="number" name="emp_id" autofocus size="40"><br><br>
-
-
-		  		<button type="submit" style="background: grey; height: 45px; width: 200px; color: white; size: 5; font:oblique;">FETCH INFO</button><br><br>
-
-		  		<button type="submit" formaction="http://3.134.115.108:80/" style="background: white	; height: 45px; width: 200px; color: black; size: 5; font:oblique;" method="GET">GO TO UPDATE DATABASE PAGE</button>
-
-			</form>
-
-		</body>
-	</font>
-</center>
 </html>
