--- a/templates/GetEmp.html
+++ b/templates/GetEmp.html
@@ -1,4 +1,4 @@
-	<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 	<style type="text/css">
@@ -97,10 +97,12 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button">Fetch Info</button>
+            <button class="button" type="submit">Fetch Info</button>
           </th>
           <th style="width:30%;"></th>
         </tr>
       </table>
 </div>
 </html>
+
+<!------------------------------- testing -------------------------------->
