--- a/templates/ApplyLeave.html
+++ b/templates/ApplyLeave.html
@@ -137,14 +137,13 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button">Apply</button>
+            <button class="button" type="submit">Apply</button>
           </th>
           <th style="width:30%;"></th>
         </tr>
       </table>
 </div>
-<div id="applyLeaveContent">
-	Apply Leave
-</div>
 
 </html>
+
+<!------------------------------- testing -------------------------------->
