--- a/templates/AddEmp.html
+++ b/templates/AddEmp.html
@@ -37,7 +37,7 @@
 </head>
 
 <div id="header">
-	<form action="/addemp/function" method = "POST">
+	<form action="/addemp/function" method = "POST" enctype="multipart/form-data">
 		<table style="width:100%; height: 400pt;">
 			<tr>
 			  <th id="homeButton" style="width:10%">
