--- a/templates/AttendanceOutput.html
+++ b/templates/AttendanceOutput.html
@@ -103,7 +103,7 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button">Back</button>
+            <button class="button" formaction="/attendance/">Back</button>
           </th>
           <th style="width:30%;"></th>
         </tr>
