--- a/templates/AttendanceOutput.html
+++ b/templates/AttendanceOutput.html
@@ -73,7 +73,7 @@
           <th style="width:20%;"></th>
           <th colspan="2" style="background-color:#dfe6ea" class="cursive">Login Time : </th>
           <th colspan="3" style="background-color:#dfe6ea">
-              <p class="cursive">{{loginTime}}</p>
+              <p class="cursive">{{CheckinTime}}</p>
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -83,7 +83,7 @@
           <th style="width:20%;"></th>
           <th colspan="2" style="background-color:#dfe6ea" class="cursive">Checkout Time : </th>
           <th colspan="3" style="background-color:#dfe6ea">
-                  <p class="cursive">{{checkoutTime}}</p>
+                  <p class="cursive">{{CheckoutTime}}</p>
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -93,7 +93,7 @@
           <th style="width:20%;"></th>
           <th colspan="2" style="background-color:#dfe6ea" class="cursive">Total Working Hours : </th>
           <th colspan="3" style="background-color:#dfe6ea">
-              <p class="cursive">{{totalWorkingHours}}</p>
+              <p class="cursive">{{TotalWorkingHours}}</p>
           </th>
           <th style="width:30%;"></th>
         </tr>
