--- a/templates/AddEmpOutput.html
+++ b/templates/AddEmpOutput.html
@@ -104,7 +104,9 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button" type="submit" formaction="/addemp/">Back</button>
+            <a href="/addemp/">
+              <button class="button" type="submit" formaction="/addemp/">Back</button>
+            </a>
           </th>
           <th style="width:30%;"></th>
         </tr>
