--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -144,7 +144,9 @@
           <th></th>
           <th style="width:20%;"></th>
           <th colspan="5" style="background-color:#dfe6ea">
-            <button class="button" formaction="/getemp/">Close</button>
+            <a href="/getemp/">
+              <button class="button" formaction="/getemp/">Close</button>
+            </a>
           </th>
           <th style="width:30%;"></th>
         </tr>
