--- a/templates/GetEmpOutput.html
+++ b/templates/GetEmpOutput.html
@@ -85,7 +85,7 @@
           <th style="width:20%;"></th>
           <th style="background-color:#dfe6ea" class="cursive">Employee ID : </th>
           <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{employeeID}}</p>
+            <p class="cursive">{{result[0]}}</p> <!-- employee id -->
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -94,7 +94,7 @@
           <th style="width:20%;"></th>
           <th style="background-color:#dfe6ea" class="cursive">First Name : </th>
           <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{firstName}}</p>
+            <p class="cursive">{{result[1]}}</p> <!--firstname-->
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -104,7 +104,7 @@
           <th style="width:20%;"></th>
           <th style="background-color:#dfe6ea" class="cursive">Last Name : </th>
           <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{lastName}}</p>
+            <p class="cursive">{{result[2]}}</p> <!--lastname-->
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -114,7 +114,7 @@
           <th style="width:20%;"></th>
           <th style="background-color:#dfe6ea" class="cursive">Primary Skills : </th>
           <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{primarySkills}}</p>
+            <p class="cursive">{{result[3]}}</p> <!--primary skills-->
           </th>
           <th style="width:30%;"></th>
         </tr>
@@ -124,7 +124,7 @@
           <th style="width:20%;"></th>
           <th style="background-color:#dfe6ea" class="cursive">Location : </th>
           <th colspan="4" style="background-color:#dfe6ea">
-            <p class="cursive">{{location}}</p>
+            <p class="cursive">{{result[4]}}</p> <!--location-->
           </th>
           <th style="width:30%;"></th>
         </tr>
